--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h3>Order Date</h3>
                 </div>
                 <div class="address-wrapper address-wrapper__shipping">
-                    <h3>Billing Address</h3>
+                    <h3>Shipping Address</h3>
                     <input name='first-name' placeholder='First Name' type="text">
                     <input name='last-name' placeholder='Last Name' type="text">
                     <input name='add-line-1' placeholder='Address line 1' type="text">
@@ -55,38 +55,18 @@
                     <div class="delete-btn-wrapper">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="product-id-wrapper">
-                        <select>
-                        </select>
-                    </div>
-                    <div class="product-name-wrapper">
-                        Product Name
-                    </div>
-                    <div class="qty-wrapper">
-                        Qty
-                    </div>
-                    <div class="unit-price-wrapper">
-                        Unit Price
-                    </div>
-                    <div class="total-price-wrapper">
-                        Unit Price
-                    </div>
-                    <div class="notes-wrapper">
-                        Notes
-                    </div>
-                    <div class="delete-btn-wrapper">
-                        <button>Delete</button>
-                    </div>
+                <div class="all-products">
                 </div>
                 <div class="row row__add-product">
-                    <h3>Add Product</h3>
-                    <select></select>
+                    <select class='add-product'></select>
+                    <button class="add-btn">Add Product</button>
                 </div>
                 <div class="row row__save-order">
                     <button class="save-btn">Update</button>
                 </div>
             </div>
         </form>
+        <script src="initialData.js"></script>
+        <script src="index.js"></script>
   </body>
 </html>
