updating order and showing correct error message

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <button class="add-btn">Add Product</button>
                 </div>
                 <div class="row row__save-order">
+                    <div class='error-messge'></div>
                     <button class="save-btn">Update</button>
                 </div>
             </div>
