Adding source for date picker

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Manage Orders</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/jquery-ui.min.css">
+        <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
             <div class="white-section white-section__address">
@@ -65,7 +66,8 @@
                     <button class="save-btn">Update</button>
                 </div>
             </div>
-        <script src="initialData.js"></script>
-        <script src="index.js"></script>
+        <script src="./js/initialData.js"></script>
+        <script src="./js/jquery.min.js"></script>
+        <script src="./js/index.js"></script>
   </body>
 </html>
