Add dates to order details

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <input name='zipcode' placeholder='Zipcode' type="text">
                     <input name='country' placeholder='Country' type="text">
                     <h3>Order Date</h3>
+                    <input type="text" id="date__billing">
                 </div>
                 <div class="address-wrapper address-wrapper__shipping">
                     <h3>Shipping Address</h3>
@@ -30,6 +31,7 @@
                     <input name='zipcode' placeholder='Zipcode' type="text">
                     <input name='country' placeholder='Country' type="text">
                     <h3>Expected Delivery</h3>
+                    <input type="text" id="date__shipping">
                 </div>
             </div>
             <div class="white-section white-section__products">
@@ -68,6 +70,7 @@
             </div>
         <script src="./js/initialData.js"></script>
         <script src="./js/jquery.min.js"></script>
+        <script src="./js/jquery-ui.min.js"></script>
         <script src="./js/index.js"></script>
   </body>
 </html>
